# utcalc

./: .gitignore  Procfile  README.md  key_gen.py  manage.py  pyproject.toml
calc/: forms.py  models.py  urls.py  views.py
calc/migrations/: 0001_initial.py
calc/static/js/: calculate.js
calc/templates/calc/: index.html  result.html
static/css/: base.css
users/: views.py
users/static/css/: admin_css.css
users/templates/: base.html
users/templates/admin/: base_site.html
users/templates/registration/: login.html  signup.html
users/templates/users/: index.html
utilitycalc/: asgi.py  settings.py  urls.py  wsgi.py
