[tool.poetry]
name = "tarcalcdjango"
version = "0.1.0"
description = ""
authors = ["Anton Butkov <ant.butkov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.7"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
whitenoise = "^6.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
